# Tonstudio

./: .gitignore  CMakeLists.txt  QT-Deployment.bat  README.md  Tonstudio.pro  macros.cmake  main.cpp  mainwindow.cpp
Cassandra/: init.cql
Redis/: redis.conf
include/libmongoc-1.0/: mongoc-bulk-operation.h  mongoc-config.h  mongoc-database.h  mongoc-find-and-modify.h  mongoc-gridfs-file.h  mongoc-gridfs.h  mongoc-init.h  mongoc-iovec.h  mongoc-log.h  mongoc-matcher.h  mongoc-opcode.h  mongoc-read-concern.h  mongoc-server-description.h  mongoc-socket.h  mongoc-ssl.h  mongoc-stream-buffered.h  mongoc-stream-gridfs.h  mongoc-topology-description.h  mongoc-version-functions.h  mongoc-write-concern.h  mongoc.h
lib/mac/: libbson-1.0.0.dylib  libbson-1.0.dylib  libbson-1.0.la  libmongoc-1.0.0.dylib  libmongoc-1.0.dylib  libmongoc-1.0.la  (+1 more)
src/: CMakeLists.txt  GeneralConfigs.h  Login.qml  ProjectData.cpp  ProjectData.h  ProjectManager.cpp  ProjectManager.h  RecDialog.qml  RedisInitiator.cpp  RedisInitiator.h  Register.qml  SoundComponent.cpp  SoundComponent.h  SoundComponentGraphic.cpp  SoundComponentGraphic.h  SoundComponentPersistent.cpp  SoundComponentPersistent.h  SoundComponentVirtual.cpp  SoundComponentVirtual.h  SoundListModel.cpp  SoundListModel.h  SourceFiles.cmake  TSButton.qml  TSContent.qml  TSMenu.qml  TSMenuBar.qml  TSStatusbar.qml  TSToolbar.qml  Tonspur.qml  Tonstudio.qml  cassandra_handler.cpp  cassandra_handler.h  macros.cmake  main.cpp  mongodb_handler.cpp  mongodb_handler.h  projectinfo.cpp  projectinfo.h  qml.qrc  sounddevicesettings.cpp  (+3 more)
(+42 files in other folders)
